--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -2,10 +2,11 @@ body {
     @include font-size(map-get($fontSizes, body));
     line-height: 1.5;
     font-weight: 400;
-    font-family: "Arial", sans-serif;
+    font-family: "Poppins", sans-serif;
+	color: map-get($colors, supportLight2);
 }
 h1 {
     @include font-size(map-get($fontSizes, h1));
     line-height: 1.2;
-    font-weight: 700;
+    font-weight: 600;
 }
