--- a/src/scss/utilities/_variables.scss
+++ b/src/scss/utilities/_variables.scss
@@ -26,14 +26,17 @@ $grid: (
     gutter: 30px
 );
 $fontSizes: (
-    h1: 5.2rem,
-    h2: 4.2rem,
+    h1: 7.8rem,
     body: 1.8rem
 );
 $colors: (
-    primary: #00F,
+    primary: rgba(0, 178, 255, 0.9),
+	primaryDark: #0085FF,
     supportDark1: #000,
+    supportDark2: #171717,
+    supportDark3: #171823,
     supportLight1: #FFF,
+    supportLight2: #E9F0F4,
     success: #01CC88,
     warning: #FFC107,
     danger: #DC3545
