--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+	$shadowState: 0 5px 14px transparentize(map-get($colors, primary), 0.75);
 	display: inline-block;
 	padding: 1.6rem 5rem;
 	border-radius: 20px;
@@ -15,10 +16,11 @@
 		),
 		hover: (
 			opacity: 0.75,
-			box-shadow: 5px 14px transparentize(map-get($colors, primary), 0.75)
+			box-shadow: $shadowState
 		),
 		active: (
 			opacity: 0.45,
+			box-shadow: $shadowState
 		)
 	));
 
