--- a/src/scss/utilities/_variables.scss
+++ b/src/scss/utilities/_variables.scss
@@ -16,7 +16,7 @@ $rfs-rem-value: 10;
 $rfs-factor: 5;
 $rfs-breakpoint: map-get(map-get($mediaQuery, sizes), xl);
 
-// your UI
+// UI
 $grid: (
     containerDefault: 1320px,
     containerXxl: 1140px,
@@ -41,10 +41,15 @@ $colors: (
     warning: #FFC107,
     danger: #DC3545
 );
+
+// general
 $transitions: (
-    timingFunction: ease-in-out,
-	durations: (
-		global: 300ms,
-		button: 200ms,
-	)
+	global: (
+		duration: 300ms,
+		timing-function: ease-in-out
+	),
+	button: (
+		duration: 200ms,
+		timing-function: ease-in-out
+	),
 );
