--- a/src/scss/utilities/_functions.scss
+++ b/src/scss/utilities/_functions.scss
@@ -1,3 +1,24 @@
+// get maps
+@function mediaQuery($key) {
+    @return map-get($mediaQuery, $key);
+}
+@function breakpoint($key) {
+    @return map-get(mediaQuery("sizes"), $key);
+}
+@function grid($key) {
+    @return map-get($grid, $key);
+}
+@function fontSize($key) {
+    @return map-get($fontSizes, $key);
+}
+@function accentColor($key) {
+    @return map-get($accentColors, $key);
+}
+@function color($key) {
+    @return map-get($colors, $key);
+}
+
+// general
 @function isSVG($property) {
     @if ($property == fill or $property == stroke) {
         @return path;
