--- a/src/scss/utilities/_variables.scss
+++ b/src/scss/utilities/_variables.scss
@@ -7,8 +7,8 @@ $mediaQuery: (
         md: 767.98,
         lg: 991.98,
         xl: 1199.98,
-        xxl: 1399.98
-    )
+        xxl: 1399.98,
+    ),
 );
 
 // rfs config
@@ -23,39 +23,39 @@ $grid: (
     containerXl: 960px,
     containerLg: 720px,
     containerMd: 540px,
-    gutter: 30px
+    gutter: 30px,
 );
 $fontSizes: (
     h1: 7.8rem,
-    body: 1.8rem
+    body: 1.8rem,
 );
 $accentColors: (
-    primary: #00B2FF,
-    secondary: #FFDD35,
-    success: #01CC88,
-    warning: #FFC107,
-    danger: #DC3545
+    primary: #00b2ff,
+    secondary: #ffdd35,
+    success: #01cc88,
+    warning: #ffc107,
+    danger: #dc3545,
 );
 $colors: (
     primary: map-get($accentColors, primary),
     secondary: map-get($accentColors, secondary),
-	primaryLight: lighten(map-get($accentColors, primary), 22%),
-	primaryDark: darken(map-get($accentColors, primary), 12%),
-    supportLight1: #FFF,
-    supportLight2: #E9F0F4,
+    primaryLight: lighten(map-get($accentColors, primary), 22%),
+    primaryDark: darken(map-get($accentColors, primary), 12%),
+    supportLight1: #fff,
+    supportLight2: #e9f0f4,
     supportDark1: #000,
     supportDark2: #171717,
-    supportDark3: #171823
+    supportDark3: #171823,
 );
 
 // general
 $transitions: (
-	global: (
-		duration: 300ms,
-		timing-function: ease-in-out
-	),
-	button: (
-		duration: 200ms,
-		timing-function: ease-in-out
-	),
+    global: (
+        duration: 300ms,
+        timing-function: ease-in-out,
+    ),
+    button: (
+        duration: 200ms,
+        timing-function: ease-in-out,
+    ),
 );
