--- a/src/scss/utilities/_mixins.scss
+++ b/src/scss/utilities/_mixins.scss
@@ -79,3 +79,8 @@
     margin-left: auto;
     margin-right: auto;
 }
+@mixin SVGResponsive {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
