Updated animation mixin and applied

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -39,8 +39,10 @@ body {
             width: 250px;
             height: auto;
             @include center;
-            animation: logoSpin infinite 25s linear;
 
+            @include animation {
+                animation: logoSpin infinite 25s linear;
+            }
             @include breakpoint(sm) {
                 width: 180px;
             }
