--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -46,7 +46,7 @@ $shadowState: 0 5px 14px transparentize(color("primary"), 0.86);
 /*
     property = second arg (CSS property)
 
-    If you are going to modify the state of just one property, pass values instead of maps in the default keys (default, hover, and active).
+    If you are going to modify the state of just one property, pass values instead of maps in the default keys (default, hover, active and focus).
 
     The values as well as the transitions will be used in the property specified in the second argument of the mixin.
 */
