Fix hover state for only not mobile

--- a/src/scss/utilities/_mixins.scss
+++ b/src/scss/utilities/_mixins.scss
@@ -67,8 +67,10 @@
                     #{$property}: $value;
                 }
             } @else if $state == hover {
-                &:hover #{$isSVG} {
-                    #{$property}: $value;
+                @include desktop {
+                    &:hover #{$isSVG} {
+                        #{$property}: $value;
+                    }
                 }
             } @else if $state == active {
                 &:active #{$isSVG} {
